Fix z-index for the header element

--- a/css-positioning/css-positioning_layout-with-position/css/styles.css
+++ b/css-positioning/css-positioning_layout-with-position/css/styles.css
@@ -25,6 +25,7 @@ body {
   position: fixed;
   top: 0;
   width: 100vw;
+  z-index: 10;
 }
 
 .header__text {
